Resolves: tdf#109149 don't poll the Default Printer Name on every query

We are queried on every change, so on every keystroke, and we are only
using this to fill in the printername inside the label of "Print
Directly (printer-name)" On Printer::GetDefaultPrinterName() is
implemented with GetDefaultPrinter so don't call this excessively. 5
mins seems a reasonable refresh time.

Change-Id: I71e87f26ed022241e09f9ab0eed94d09648ec9b9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152415
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>